umbrella-charts/coder/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: coder
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: coder
      app.kubernetes.io/name: coder
  egress:
    - toFQDNs:
        - matchName: telemetry.coder.com
        - matchName: api.github.com
          # Terraform dependencies
        - matchName: registry.terraform.io
        - matchName: releases.hashicorp.com
        - matchName: github.com
        - matchName: objects.githubusercontent.com
          # Self
        - matchName: coder.tools.kilchhofer.info
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchPattern: "*.l.google.com"
      toPorts:
        - ports:
            - port: "19302"
              protocol: UDP
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "8080"
